# legato-fx30ltem

./: README.md  package.properties  sources.md5  version
apps/platformServices/airVantageConnector/apps/test/: CMakeLists.txt
apps/platformServices/airVantageConnector/apps/test/airVantageConnectorUnitTest/: CMakeLists.txt  Component.cdef  interfaces.h  main.c
apps/platformServices/airVantageConnector/apps/test/airVantageConnectorUnitTest/airVantageConnectorComp/: Component.cdef  airVantageConnector_stub.c  lwm2mcore_stub.c
apps/platformServices/airVantageConnector/apps/test/assetDataTest/: CMakeLists.txt  assetDataTest.adef  nsAssetDataTest.adef
apps/platformServices/airVantageConnector/apps/test/assetDataTest/assetDataTestComponent/: main.c
apps/platformServices/airVantageConnector/apps/test/assetDataTest/nsAssetDataTestComponent/: main.c
apps/platformServices/airVantageConnector/apps/test/assetPush/assetPushComponent/: main.c
apps/platformServices/airVantageConnector/apps/test/avDataUnitTest/: CMakeLists.txt  Component.cdef  interfaces.h  main.c
apps/platformServices/airVantageConnector/apps/test/avDataUnitTest/assetDataComp/: Component.cdef  assetData_stub.c
apps/platformServices/airVantageConnector/apps/test/avcIntegrationTest/: CMakeLists.txt  avcTest.adef
apps/platformServices/airVantageConnector/apps/test/avcIntegrationTest/avcTestComp/: Component.cdef  avcTest.c
apps/platformServices/airVantageConnector/apps/test/packageDownloadHost/: CMakeLists.txt  Component.cdef  main.c  main.h
apps/platformServices/airVantageConnector/apps/test/session/: avDataSession.adef  avcSession.adef
platformAdaptor/qmi/src/: CMakeLists.txt
platformAdaptor/qmi/src/components/doc/: SDD_fwupdate_dualsystem.dox
platformAdaptor/qmi/src/components/le_pa/: info_qmi.h  lpt_qmi.h  mcc_qmi.h  mdc_qmi.h  mrc_qmi.h  pa_adc_local.h  pa_adc_qmi.c  pa_antenna_qmi.c  pa_info_qmi.c  pa_ips_qmi.c  pa_lpt_qmi.c  pa_mcc_qmi.c  pa_mdc_qmi.c  pa_mdmCfg_qmi.c  pa_mrc_qmi.c  pa_qmi.c  pa_qmi_local.h  pa_riPin_qmi.c  pa_rtc_local.h  pa_rtc_qmi.c  pa_sim_qmi.c  pa_sms_qmi.c  pa_temp_qmi.c  sim_qmi.h  sms_qmi.h
platformAdaptor/qmi/src/components/le_pa_audio/: pa_audio.c  pa_audio_local.h
platformAdaptor/qmi/src/components/le_pa_audio/sd_stub/: pa_audio_sd_stub.c  sdudefs.h
platformAdaptor/qmi/src/components/le_pa_avc/: Component.cdef  pa_avc_qmi.c
platformAdaptor/qmi/src/components/le_pa_ecall/: Component.cdef  pa_ecall_qmi.c
platformAdaptor/qmi/src/components/le_pa_fwupdate/: pa_fwupdate_qmi_common.c  pa_fwupdate_qmi_common.h
platformAdaptor/qmi/src/components/le_pa_gnss/: Component.cdef  pa_gnss_qmi.c
platformAdaptor/qmi/src/components/le_pa_remotesim/: Component.cdef  pa_rsim_qmi.c
platformAdaptor/qmi/src/components/le_pa_secStore/: Component.cdef  pa_secStore_qmi.c
platformAdaptor/qmi/src/components/le_pa_uartMode/: Component.cdef  pa_uartMode_qmi.c
platformAdaptor/qmi/src/components/swiQmi/: componentInit.c  swiQmi.c  swiQmi.h
(+226 files in other folders)
